Add SN API unit tests; refactor TurElasticsearch
Add 18 new unit test classes covering SN console and search APIs (site, field, faceting, ranking, search, autocomplete, spellcheck, metrics, export, etc.). Tweak .vscode settings to proceed on Java build failures (java.debug.settings.onBuildFailureProceed = true). Refactor TurElasticsearch: reorganize imports, introduce Optional/Objects/Collections types, annotate nullability, clean up formatting, and replace stream collection with toList() for result construction.